# predict_withdraw

./: .gitignore  CLAUDE.md  CMakeLists.txt  TDFAPI3_20260227-090919.25170  account.ini  main.cpp  market_data_api.cpp  market_data_api.h  market_data_processor.cpp  market_data_processor.h  msg_queue.cpp  msg_queue.h  order_manager_withdraw.cpp  order_manager_withdraw.h  server_buy_withdraw_log_2026-02-27  settings_manager.cpp  settings_manager.h  spdlog_api.cpp  spdlog_api.h  stdafx.h  stock_data_manager.cpp  stock_data_manager.h  stock_data_manager_factory.cpp  stock_data_manager_factory.h  time_span_manager.cpp  time_span_manager.h  trade_return_monitor.cpp  trade_return_monitor.h  trader_api.cpp  trader_api.h  utility_functions.cpp  utility_functions.h  white_list.txt  延迟计算思路.md
docs/: design-v0-50w累计功能设计.md  design-v1-委托撤单功能设计.md  design-v2-方案AB与队列性能优化.md  design-v3-已知缺陷修复.md  design-v4-白名单读写优化.md  design-v5-预撤单唤醒延迟修复.md  design-v6-触发规则调整与跟单时间门控.md  design-v7-盘前0915批量预挂风控限制.md  design-v8-行情生成与消费链路图.md  predict_withdraw_limitup_50w_flag_order_design.md  代码规范.md  字段说明.md  构建修复.md  示范.md  设计.md
include/: TDFAPIStruct.h
include/spdlog/fmt/bundled/: format-inl.h  format.h
lib/: libzmq.so.5.2.4
server_logs/: server_buy_withdraw_log_2026-02-23
tools/: tdf_slot_probe.cpp
